# PulsarX

./: .gitignore  AUTHORS  Dockerfile  README  README.md  config.h.in~  configure.ac  pulsarplot.cpp
config/: ax_python.m4  cuda.m4  pymod.m4  sedge.m4
examples/: ddplan.txt  example.cands  filplan.json
include/: archivelite.h  archivewriter.h  cheby.h  databuffer.h  dedisperse.h  dedispersionX.h  dedispersionlite.h  dedispersionliteU.h  dermdm.h  filmaker.h  filterbankreader.h  filterbankwriter.h  gridsearch.h  hdu.h  integration.h  matplotlibcpp.h  predictor.h  psrdatareader.h  psrfitsreader.h  pulsarplot.h  pulsarsearch.h  subdedispersion.h  utils.h
include/template/: fast_fold.template  fast_search.template  meerkat_fold.template  meerkat_fold_PTUSE_Lband.template  meerkat_fold_UHF.template  parkes_fold_uwl.template
python/: LICENSE  README.md  setup.cfg  setup.py
python/cpp/: filtools.cpp  formats.cpp  numerical_algorithm.cpp  orbit_utils.cpp  psrdata_reader.cpp
python/examples/orbit_solve/: test.txt  yaml.conf
python/pulsarx/: ACCEL_sift_pulsarx.py
python/pulsarx/orbit_solve/: orbit_solver.py  phasex.py
src/: Makefile.am
src/container/: databuffer.cpp
src/container/.deps/: kdtree_test.Po
src/formats/: filterbank.cpp  hdu.cpp
src/module/: Makefile.am  archivewriter.cpp  baseline.cpp  equalize.cpp  filterbankreader.cpp  filterbankwriter.cpp  preprocesslite.cpp  psrfitsreader.cpp  rfi.cpp  subdedispersion.cpp
src/pulsar/: Makefile.am  archivelite.cpp  archivewriter.cpp  chop8.cpp  dedisperse_all.cpp  dedisperse_all_fil.cpp  dedispersionX.cpp  dedispersionlite.cpp  dedispersionliteU.cpp  dermdm.cpp  dmffdot.cpp  filmaker.cpp  filtool.cpp  genstat  genstat.cpp  gridsearch.cpp  predictor.cpp  psrfold.cpp  psrfold_fil.cpp  psrfold_fil2.cpp  psrfold_tim.cpp  pulsar_injector.cpp  pulsarplot.cpp  pulsarsearch.cpp
src/pulsar/.deps/: pulsarfolder.Po  pulsarfolder.Tpo
src/utils/: utils.cpp
src/ymw16/: Makefile.am
