[metadata]
name = pulsarx
version = 0.1
url = https://gitlab.mpcdf.mpg.de/ypmen/PulsarX.git
author = Yunpeng Men
author_email = ypmen@mpifr-bonn.mpg.de
long_description = file: README.md, LICENSE
license = GNU GPLv3
classifiers = 
	License :: OSI Approved :: GPL License
	Programming Language :: Python :: 3

[options]
python_requires = >=3.6
zip_safe = False
include_package_data = True
packages = find:
install_requires =
	pymultinest
	pybind11
	pyyaml
	scipy
	numpy
	matplotlib
	tqdm

[options.package_data]
* = *.md

[options.entry_points]
console_scripts =
	phasex = pulsarx.orbit_solve.phasex:main
	orbit_solver = pulsarx.orbit_solve.orbit_solver:main